--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,20 @@
 {
+    "configurations": [
+        {
+            "name": "Launch Edge",
+            "request": "launch",
+            "type": "pwa-msedge",
+            "url": "http://localhost:19006",
+            "webRoot": "${workspaceFolder}"
+        }
+       
+        
+      
+    ]
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "firefox",
-            "request": "launch",
-            "reAttach": true,
-            "name": "Launch localhost",
-            "url": "http://localhost:19006/",
-            "webRoot": "${workspaceFolder}"
-        },
 
-    ]
+
+    
 }
